@@ -817,13 +817,12 @@ function __autoload($class_name){
 
 
 		/* Comments: !!! Don't forget sync code with C !!! */
-		$result=DBselect('SELECT i.type, i.delay, count(*),count(*)/i.delay as qps '.
+		$result=DBselect('SELECT i.type, i.delay, count(*)/i.delay as qps '.
 							' FROM items i,hosts h '.
 							' WHERE i.status='.ITEM_STATUS_ACTIVE.
 								' AND i.hostid=h.hostid '.
 								' AND h.status='.HOST_STATUS_MONITORED.
-							' GROUP BY i.type,i.delay '.
-							' ORDER BY i.type, i.delay');
+							' GROUP BY i.type,i.delay ');
 
 		$status['qps_total']=0;
 		while($row=DBfetch($result)){
