@@ -659,10 +659,10 @@ function zbx_avg($values){
 
 	$sum = 0;
 	foreach($values as $num => $value){
-		$sum += $value;
+		$sum = bcadd($sum, $value);
 	}
 
-return ($sum / count($values));
+return bcdiv($sum, count($values));
 }
 
 // accepts parametr as integer either
